Fixing weird overflow on windows

--- a/src/srcCopy/App.css
+++ b/src/srcCopy/App.css
@@ -3,4 +3,5 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  overflow-x: hidden;
 }
